Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12842

lctl llog_print doesn't accept snapshot names with leading number

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.13.0, Lustre 2.12.4
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      The "lctl llog_print" command (in llog_ioctl()) does not accept a filesystem/log name that begins with a number, in particular those that are created with the lsnapshot utility like "1d26cfb" or similar. This causes an error "OBD_IOC_LLOG_PRINT failed: Invalid argument" unless the log is escaped with a leading '$' like "lctl llog_print \$1d26cfb-client".

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: